fixed stories not showing after refresh

--- a/react-app/src/components/SidePanel/SidePanel.css
+++ b/react-app/src/components/SidePanel/SidePanel.css
@@ -32,16 +32,6 @@
 
 }
 
-.sidepanel-writing-wrapper {
-  height: 300px;
-}
-
-.sidepanel-writing-container {
-  height: 90%;
-  width: 90%;
-  background-color: rgb(244, 214, 174);
-}
-
 
 .sidepanel-tags-container {
   position: relative;
