--- a/react-app/src/components/StoryFeed/StoryFeed.css
+++ b/react-app/src/components/StoryFeed/StoryFeed.css
@@ -1,25 +1,22 @@
 .storyfeed-container{
   width: 100%;
   position: relative;
-  background-color: #4752b1;
 }
 
-
+.hidden{
+  visibility: hidden;
+}
 
 .feed-nav {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  background-color: #ffffff;
-  background-color: #4752b1;
   border-bottom: rgba(73, 73, 73, 0.2) solid 1px ;
   box-shadow: 2px 0  0 2px rgba(73, 73, 73, 1) solid 1px ;
   height: 55px;
 } 
 
 .feed-select-container{
-  background-color: #32c72d;
-  border: black solid 1px;
   display: flex;
   width: 100%;
   height: 100%;
@@ -74,9 +71,7 @@
   overflow: hidden;
 }
 
-.feed-select-container:last-child{
-  padding-right: 30px;
-}
+
 
 
 
@@ -116,7 +111,6 @@
 .feed-header.extended {
   height: 50px;
   transition: height 0.5s ease;
-  position: sticky;
   display: flex;
   justify-content: space-between;
   top: 50px;
@@ -138,10 +132,11 @@
   justify-content: space-between;
   top: 0px;
   left: 0px;
-  width: 100%;
-  background-color: #d03838;
+  width: 110%;
   border-bottom: rgba(73, 73, 73, 0.2) solid 1px ;
   box-shadow: 2px 0  0 2px rgba(73, 73, 73, 1) solid 1px ;
   height: 55px;
+
+
 } 
 
