--- a/react-app/src/components/StoryTileTwo/StoryTileTwo.css
+++ b/react-app/src/components/StoryTileTwo/StoryTileTwo.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+  background-color: transparent;
 }
 
 .story-tile-style2:first-child {
